# teach

./: .gitignore  DATALICENSE  DEVELOPMENT.md  IMAGESLICENSE  LICENSE  README.md  SOFTWARELICENSE  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docker/: Dockerfile.RemoteInferenceRunner  Dockerfile.TEAChAPI-ETModel  Dockerfile.TEAChAPI-SampleModel
src/teach/: logger.py  settings.py  utils.py
src/teach/analysis/: teach_data_exploration.ipynb
src/teach/cli/: api.py  download.py  eval.py  inference.py  replay.py
src/teach/dataset/: actions.py  dataset.py  definitions.py  episode.py  initialization.py  interaction.py  pose.py  task.py  task_THOR.py
src/teach/eval/: compute_metrics.py
src/teach/inference/: actions.py  edh_inference_runner.py  et_model.py  inference_runner.py  inference_runner_base.py  remote_model.py  sample_model.py  teach_model.py  tfd_inference_runner.py
src/teach/meta_data_files/: default_definitions.json
src/teach/meta_data_files/ai2thor_resources/: __init__.py  action_idx_to_action_name.json  action_to_action_idx.json  custom_object_classes.json
src/teach/meta_data_files/config/: metadata_ai2thor.json  metadata_google_scanned_objects.json
src/teach/meta_data_files/task_definitions/: 101__toast.json  102__coffee.json  103__clean_x.json  104__sliced_x.json  105__cooked_slice_of_x.json  106__plate_of_toast.json  107__n_cooked_slices_of_x_in_y.json  (+18 more)
src/teach/replay/: episode_replay.py  episode_replay_worker.py
src/teach/simulators/: simulator_THOR.py  simulator_base.py  simulator_factory.py
(+43 files in other folders)
