[metadata]
name = TEACh
version = 1.0
description = Task-driven Embodied Agents that Chat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexa/TEACh
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max-line-length = 120
inline-quotes = double
multiline-quotes = double
docstring-quotes = double
select = C,E,F,I,Q,R,W,B,B950
ignore = E203, E501, W503, W504, R504
